--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "eslint-config-airbnb": "0.0.8",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.4.1",
+    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "node-sass": "^3.3.2",
+    "path": "^0.12.7",
     "react-transform-webpack-hmr": "^0.1.6",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.12.1",
-    "webpack-dev-server": "^1.11.0"
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-dev-server": "^1.11.0",
+    "webpack-hot-middleware": "^2.3.0"
   },
   "dependencies": {
     "react": "^0.13.3"
