--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "webpack-hot-middleware": "^2.3.0"
   },
   "dependencies": {
+    "express": "^4.13.3",
+    "lodash": "^3.10.1",
     "react": "^0.13.3"
   }
 }
